Bug 172360 - In Folders panel, no way to open selected folder using keyboard (Enter key has no effect)
Summary: In Folders panel, no way to open selected folder using keyboard (Enter key ha...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-07 21:38 UTC by Per Ångström
Modified: 2009-02-01 15:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Per Ångström 2008-10-07 21:38:14 UTC
Version:            (using KDE 4.1.2)
Installed from:    SuSE RPMs

I can't find a way to use the Folders panel using just the keyboard: to open the selected folder in the main view I would like to press Enter (like in Konqueror), but it seems I have to click the folder with the mouse to open it.

How to reproduce:
1) Bring up the Folders panel.
2) Select any folder in the panel.
3) With the keyboard, select another folder, one that is not open in the main view.
4) Press Enter.

Expected behavior: The selected folder should open in the main view.
Actual behavior:   Nothing happens at all.
Comment 1 Peter Penz 2008-10-07 21:53:03 UTC
Thanks for the report. I agree and will fix this for KDE 4.2.
Comment 2 Bimal Rekhadiya 2009-01-03 07:34:12 UTC
I am using Kubuntu 8.10 and installed KDE 4.2 Beta vesion. 

I also need this feature.

Thank you
Comment 3 Dario Andres 2009-01-10 02:56:53 UTC
This can be made by changing:

treeviewsidebarpage.cpp:162-163

        connect(m_treeView, SIGNAL(clicked(const QModelIndex&)),
                this, SLOT(updateActiveView(const QModelIndex&)));

to

        connect(m_treeView, SIGNAL(activated(const QModelIndex&)),
                this, SLOT(updateActiveView(const QModelIndex&)));
Comment 4 Peter Penz 2009-01-12 18:56:07 UTC
Thanks for the patch, I'll commit it tomorrow. I just need to test it with other styles too, as the activated() signal depends on the style (which is not nice in my opinion).
Comment 5 Peter Penz 2009-01-16 11:28:26 UTC
SVN commit 911855 by ppenz:

Pressing "Enter" in the folders panel should open the folder in the main view. Thanks to Darío Andrés for the patch!

BUG: 172360

 M  +1 -1      folderspanel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=911855
Comment 6 Peter Penz 2009-01-16 11:35:13 UTC
SVN commit 911856 by ppenz:

Backport of SVN commit 911855:

Pressing "Enter" in the folders panel should open the folder in the main view. Thanks to Darío Andrés for the patch!

CCBUG: 172360

 M  +1 -1      treeviewsidebarpage.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=911856
Comment 7 Peter Penz 2009-02-01 15:08:47 UTC
SVN commit 919648 by ppenz:

Replace patch for bug 181226 by a different approach, as the previous patch resulted in a changed behavior when using the double-click mode (-> a treeview item had to be pressed twice to show it in the main view).

CCBUG: 172360
CCBUG: 181226

 M  +12 -1     folderspanel.cpp  
 M  +3 -0      folderspanel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=919648
Comment 8 Peter Penz 2009-02-01 15:12:55 UTC
SVN commit 919653 by ppenz:

Backport of SVN commit 919648 for KDE 4.2.1: Replace patch for bug 172360 by a different approach, as the previous patch resulted in a changed behavior when using the double-click mode (-> a treeview item had to be pressed twice to show it in the main view).

CCBUG: 172360
CCBUG: 181226

PS: in the commit comment for trunk I accidently mixed the numbers 172360 and 181226 in the resolution description

 M  +12 -1     treeviewsidebarpage.cpp  
 M  +3 -0      treeviewsidebarpage.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=919653