Pressing "Enter" in the folders panel should open the folder in the main view. Thanks to Darío Andrés for the patch!

BUG: 172360

svn path=/trunk/KDE/kdebase/apps/; revision=911855